--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -168,29 +167,41 @@
                             <nav class="main-menu navbar-expand-lg">
                                 <div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
-                                        <li class="current dropdown"><a href="#">Home</a>
+                                        <li class="dropdown"><a href="#">Who We Are +</a>
                                             <ul>
-                                                <li><a href="index.html">Home One</a></li>
-                                                <li><a href="index-2.html">Home Two</a></li>
+                                                <li><a href="#">History</a></li>
+                                                <li><a href="#">Founders</a></li>
+                                                <li><a href="#">Managing Commitee</a></li>
+                                                <li class="dropdown"><a href="#">Muslim Academy Surjani Town +</a>
+                                                    <ul>
+                                                        <li><a href="#">Muslim Academy Result Annoucement</a></li>
+                                                        <li><a href="#">Sport Activities at Muslim Academy</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li><a href="#">Muslim Welfare Centre-Pakistan Class Survey</a></li>
+                                                <li><a href="#">Gallery</a></li>
+                                                <li><a href="#">Management</a></li>
+                                                <li><a href="#">Audit Reports</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="about.html">About Us</a></li>
-                                        <li><a href="events.html">Events</a></li>
-                                        <li class="dropdown"><a href="#">Causes</a>
+                                        <li><a href="about.html">Our Activities</a></li>
+                                        <li><a href="events.html">School Admission</a></li>
+                                        <!-- <li class="dropdown"><a href="#">Causes</a>
                                             <ul>
                                                 <li><a href="causes-1.html">Causes One</a></li>
                                                 <li><a href="causes-2.html">Causes Two</a></li>
                                                 <li><a href="causes-3.html">Causes Three</a></li>
                                                 <li><a href="cause-details.html">Causes Details</a></li>
                                             </ul>
-                                        </li>
-                                        <li class="dropdown"><a href="#">Blog</a>
+                                        </li> -->
+                                        <!-- <li class="dropdown"><a href="#">Carrer</a>
                                             <ul>
                                                 <li><a href="blog-1.html">Blog Grid</a></li>
                                                 <li><a href="blog-2.html">Blog Clasic</a></li>
                                                 <li><a href="blog-details.html">Blog Details</a></li>
                                             </ul>
-                                        </li>
+                                        </li> -->
+                                        <li><a href="contact.html">Career</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </div>
