--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                                             </ul>
                                         </li>
                                         <li><a href="about.html">Our Activities</a></li>
-                                        <li><a href="events.html">School Admission</a></li>
+                                        <li><a href="School-addmission.html">School Admission</a></li>
                                         <!-- <li class="dropdown"><a href="#">Causes</a>
                                             <ul>
                                                 <li><a href="causes-1.html">Causes One</a></li>
@@ -185,7 +185,7 @@
                                             </ul>
                                         </li>
                                         <li><a href="about.html">Our Activities</a></li>
-                                        <li><a href="events.html">School Admission</a></li>
+                                        <li><a href="School-addmission.html">School Admission</a></li>
                                         <!-- <li class="dropdown"><a href="#">Causes</a>
                                             <ul>
                                                 <li><a href="causes-1.html">Causes One</a></li>
@@ -215,7 +215,6 @@
             </div>
             <!--End Sticky Header-->
         </header>
-
     <!--Page title-->
     <section class="page-title" style="background-image:url(images/background/1.jpg)">
         <div class="container">
