--- a/index.html
+++ b/index.html
@@ -301,6 +301,49 @@
             </div>
         </section>
 
+        <!-- Donation Details -->
+        <div class="container">
+        <div class="sec-title style-two">
+            <h4>Muslim Welfare Centre</h4>
+            <h1><span>Donation</span></h1>
+        <hr>
+        </div>
+        <div class="about-block">
+            <div class="inner-box">
+                <div class="row">
+                <div class="col-md-6 text">
+                    <p>For donations please deposit funds via Inter Bank Funds Transfer IBFT/Cheque into Muslim Welfare Centre:</p>
+                    <ul>
+                        <li style="list-style: disc;"><h4>Bank Name : Meezan Bank Limited</h4></li>
+                        <li style="list-style: disc;"><h4>Account Title :  MUSLIM WELFARE CENTRE</h4></li>
+                        <li style="list-style: disc;"><h4>Account Number : 01310100324729</h4></li>
+                        <li style="list-style: disc;"><h4>Branch : North Nazimabad – Karachi (0131)</h4></li>
+                        <li style="list-style: disc;"><h4>IBAN Number : PK73 MEZN 0001 3101 0032 4729</h4></li>
+                    </ul>
+                    <p>Please provide this information so that we can process your donation quickly:</p>
+                    <ul>
+                        <li style="list-style: disc;">Your Full Name</li>
+                        <li style="list-style: disc;">Payment Amountt</li>
+                        <li style="list-style: disc;">Payment reference no.</h4></li>
+                        <li style="list-style: disc;">Date of deposit</li>
+                    </ul>
+                </div>
+                <div class="col-md-6 text">
+                    <p>You will receive an e-mail confirming the successful completion of your donation.</p>
+                    <h4>Tax</h4>
+                    <p>ALL DONATIONS ARE TAX DEDUCTIBLE (REGISTERED CHARITY# – KAR 080-2003) Muslim Welfare Pakistan will issue Tax Deductible Receipt for Income Tax purposes for all donations.</p>
+                    <h4>Refund / Exchange Policy</h4>
+                    <p>As with most donation sites, we do not offer refunds on donations submitted through our websites. If a transaction was processed in error, please contact our office to discuss the situation with our staff.</p>
+                </div>
+            </div>
+                <div class="author">
+                    <div class="inner-box">
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+
         <!-- About Us -->
         <section class="about-us">
             <div class="container">
@@ -361,7 +404,7 @@
                             <div class="lower-content">
                                 <h5>Food & Water</h5>
                                 <h4>Feed Hungry Children</h4>
-                                <div class="text">Auis nostrud exercitation ullamc laboris nisitm aliquip ex bea sed consequat duis autes ure dolor. dolore magna aliqua nim ad minim. </div>
+                                <!-- <div class="text">Auis nostrud exercitation ullamc laboris nisitm aliquip ex bea sed consequat duis autes ure dolor. dolore magna aliqua nim ad minim. </div> -->
 
 
                                 <!--Progress Levels-->
@@ -405,7 +448,7 @@
                             <div class="lower-content">
                                 <h5>Medicine</h5>
                                 <h4>Medical Treatment</h4>
-                                <div class="text">Auis nostrud exercitation ullamc laboris nisitm aliquip ex bea sed consequat duis autes ure dolor. dolore magna aliqua nim ad minim. </div>
+                                <!-- <div class="text">Auis nostrud exercitation ullamc laboris nisitm aliquip ex bea sed consequat duis autes ure dolor. dolore magna aliqua nim ad minim. </div> -->
 
 
                                 <!--Progress Levels-->
@@ -449,7 +492,7 @@
                             <div class="lower-content">
                                 <h5>Education</h5>
                                 <h4>Education For People</h4>
-                                <div class="text">Auis nostrud exercitation ullamc laboris nisitm aliquip ex bea sed consequat duis autes ure dolor. dolore magna aliqua nim ad minim. </div>
+                                <!-- <div class="text">Auis nostrud exercitation ullamc laboris nisitm aliquip ex bea sed consequat duis autes ure dolor. dolore magna aliqua nim ad minim. </div> -->
 
 
                                 <!--Progress Levels-->
@@ -714,24 +757,24 @@
         </section>
 
         <!-- Event section -->
-        <section class="event-section">
+        <!-- <section class="event-section">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5 image-block-one">
                         <div class="image big-image"><img src="images/resource/upcomming-event.jpg" alt=""></div>
                     </div>
                     <div class="col-lg-6 offset-lg-1">
-                        <div class="sp-three">
+                        <div class="sp-three"> -->
                             <!-- sec-title -->
-                            <div class="sec-title style-two">
+                            <!-- <div class="sec-title style-two">
                                 <h4>A Muslim Foundation with Mission</h4>
                                 <h1>Upcoming <span>Events</span></h1>
                                 <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboret dolore magna aliqua ut enim ad minim veniam, quis nostrud exercitation.</div>
-                            </div>
+                            </div> -->
 
-                            <div class="row">
+                            <!-- <div class="row"> -->
                                 <!-- Event block -->
-                                <div class="col-md-6 event-block">
+                                <!-- <div class="col-md-6 event-block">
                                     <div class="inner-box">
                                         <div class="date">25 <span>July</span></div>
                                         <div class="organizer">Organized By: <a href="#">Charite Max</a></div>
@@ -741,9 +784,9 @@
                                             <li><span class="fa fa-map-marker-alt"></span>121 Kings St. NY 26038</li>
                                         </ul>
                                     </div>
-                                </div>
-                                <!-- Event block -->
-                                <div class="col-md-6 event-block">
+                                </div>-->
+                                <!-- Event block --> 
+                                <!-- <div class="col-md-6 event-block">
                                     <div class="inner-box">
                                         <div class="date">31 <span>August</span></div>
                                         <div class="organizer">Organized By: <a href="#">Charite Partner</a></div>
@@ -761,7 +804,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- Our Team -->
         <section class="our-team sp-one">
@@ -1049,8 +1092,7 @@
                             <div class="image">
                                 <img src="images/resource/author.jpg" alt="">
                             </div>
-                            <div class="text">Since vindictively over agile the some far well besides constructively well airy then one during with close excellent grabbed gosh contrary far dalmatian upheld intrepid bought and toucan majestic more some apart dear boa much
-                                cast falcon a dwelled ouch busy. </div>
+                            <div class="text">I am very thankful to the Muslim Welfare School for enrolling my child in their school. I was very upset after the closure of government schools because I can't afford such a high fee. As parents, we would like to take this prospect to thank the teachers for their continuous care, support, collaboration, and most importantly patience. Just a small note of appreciation to thank you for being such wonderfully supportive leaders and teachers</div>
                             <h3>M. Shakeel Hussain <span>Muslim Welfare Donator</span></h3>
                         </div>
                     </div>
@@ -1060,9 +1102,8 @@
                             <div class="image">
                                 <img src="images/resource/author.jpg" alt="">
                             </div>
-                            <div class="text">Since vindictively over agile the some far well besides constructively well airy then one during with close excellent grabbed gosh contrary far dalmatian upheld intrepid bought and toucan majestic more some apart dear boa much
-                                cast falcon a dwelled ouch busy. </div>
-                            <h3>Sande Well <span>Muslim Foundation Donator</span></h3>
+                            <div class="text">We are really very thankful to the Muslim Welfare Centre for their wonderful support in our area by installing the hand pump at different locations ,at Tharparkar water is badly needed no other supported us only MWC doing this as noble cause for help the residents of MNCH - Tharparkar - villages. MAY GOD BLESS MWC!</div>
+                            <h3>Allah Wasaya <span>Muslim Foundation Donator</span></h3>
                         </div>
                     </div>
 
@@ -1386,7 +1427,7 @@
                             </div>
                         </div>
 
-                        <ul class="payment-option">
+                        <!-- <ul class="payment-option">
                             <li>
                                 <h4>Choose your payment method:</h4>
                             </li>
@@ -1423,7 +1464,7 @@
                                 </div>
                             </li>
                         </ul>
-
+ -->
                         <div class="center"><button class="theme-btn btn-style-one" type="submit">Donate Now</button></div>
 
 
