--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="css/responsive.css" rel="stylesheet">
 
     <!-- Fav Icons -->
-    <link rel="shortcut-icon" href="images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -56,7 +56,7 @@
 
             <!--Header-Upper-->
             <div class="header-upper">
-                <div class="container clearfix">
+                <div class="container-fluid clearfix">
 
                     <div class="float-left logo-outer">
                         <div class="logo"><a href="index.html"><img src="images/logo.png" alt="" title=""></a>
@@ -96,24 +96,14 @@
                                                 <li><a href="#">Audit Reports</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="about.html">Our Activities</a></li>
+                                       <li><a href="our-activity.html">Our Activities</a></li>
+                                       <li class="dropdown"><a href="#">How You Can Help</a>
+                                        <ul>
+                                            <li><a href="volunteer.html">Volunteer With Us</a></li>
+                                            <li><a href="spread-the-word.html">Spread The Word</a></li>
+                                        </ul>
+                                    </li>
                                         <li><a href="School-addmission.html">School Admission</a></li>
-                                        <!-- <li class="dropdown"><a href="#">Causes</a>
-                                            <ul>
-                                                <li><a href="causes-1.html">Causes One</a></li>
-                                                <li><a href="causes-2.html">Causes Two</a></li>
-                                                <li><a href="causes-3.html">Causes Three</a></li>
-                                                <li><a href="cause-details.html">Causes Details</a></li>
-                                            </ul>
-                                        </li> -->
-                                        <!-- <li class="dropdown"><a href="#">Carrer</a>
-                                            <ul>
-                                                <li><a href="blog-1.html">Blog Grid</a></li>
-                                                <li><a href="blog-2.html">Blog Clasic</a></li>
-                                                <li><a href="blog-details.html">Blog Details</a></li>
-                                            </ul>
-                                        </li> -->
-                                        <li><a href="contact.html">Career</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </div>
@@ -154,7 +144,7 @@
 
             <!--Sticky Header-->
             <div class="sticky-header">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="clearfix">
                         <!--Logo-->
                         <div class="logo float-left">
@@ -184,7 +174,13 @@
                                                 <li><a href="#">Audit Reports</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="about.html">Our Activities</a></li>
+                                        <li><a href="our-activity.html">Our Activities</a></li>
+                                        <li class="dropdown"><a href="#">How You Can Help</a>
+                                            <ul>
+                                                <li><a href="volunteer.html">Volunteer With Us</a></li>
+                                                <li><a href="spread-the-word.html">Spread The Word</a></li>
+                                            </ul>
+                                        </li>
                                         <li><a href="School-addmission.html">School Admission</a></li>
                                         <!-- <li class="dropdown"><a href="#">Causes</a>
                                             <ul>
@@ -201,7 +197,6 @@
                                                 <li><a href="blog-details.html">Blog Details</a></li>
                                             </ul>
                                         </li> -->
-                                        <li><a href="contact.html">Career</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </div>
@@ -1237,7 +1232,7 @@
                                             </figure>
                                         </div>
                                         <div class="widget-content">
-                                            <div class="text">Significantly pushed under the frugal lemur one and meretricious lucrative inside before swept magnificently expand business.</div>
+                                            <div class="text">At the Muslim Welfare Pakistan, we are guided by the belief that Service to humanity is service to Allah (God). We are committed to serving those in need, irrespective of religion, nationality, caste or creed.</div>
                                             <ul class="social-icon-three">
                                                 <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2FMwc_Centre"><i class="fab fa-twitter"></i></a></li>
                                                 <li><a href="https://www.facebook.com/MuslimWelfareCentrePaistan/"><i class="fab fa-facebook-f"></i></a></li>
